--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -22,6 +22,10 @@ p {
   line-height: 1.5;
 }
 
+.xivMain {
+  height: 100%;
+}
+
 .xivNav {
   .xivNav__nav-link:hover {
     text-decoration: none;
